[metadata]
name = rentgen_unzip
version = 1.0
description = Unzip password zipped files
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
python_requires = >= 3.9
install_requires =
    tqdm
    typer

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rentgen-unzip = pass_unzip:runscript